<resources>
    <string name="app_name">project183</string>
    <string name="signInTitle" translatable="false">Login</string>
    <string name="edtPhone" translatable="false">Phone number</string>
    <string name="btnSendOTP" translatable="false"> Send OTP </string>
    <string name="verifyTitle" translatable="false">Verify OTP</string>
    <string name="btnVerifyOTP" translatable="false">Verify</string>
    <string name="place_autocomplete_query_hint">Search for places</string>
    <string name="place_autocomplete_reverse_geocoding_error_message">Unable to locate selected coordinate</string>
    <string name="place_autocomplete_selection_error">Error happened during request</string>
    <!--  Đơn vị tiền tệ và thời gian  -->
    <string name="currency_unit">$</string>
    <string name="time_unit">minutes</string>
    <!--  activity_cart  -->
    <string name="cart_title">Giỏ hàng</string>
    <string name="cart_empty">Bạn chưa thêm sản phẩm vào giỏ hàng</string>

    <string name="cart_order_btn">Đặt hàng</string>
    <!--  activity_order_success  -->
    <string name="order_success_description">Đặt hàng thành công</string>
    <string name="order_success_thanks">Cảm ơn bạn đã đặt hàng. Chúng tôi sẽ xử lý đơn hàng của bạn sớm nhất.</string>
    <string name="order_success_home_btn">Về trang chủ</string>
    <!--  activity_checkout  -->
    <string name="checkout_food_name">Food name </string>
    <string name="checkout_quantity">Quantity</string>
    <string name="checkout_price">Price</string>
    <string name="checkout_total_price_foods">Total food price</string>
    <string name="checkout_delivery_address">Delivery address</string>
    <string name="checkout_delivery_fee">Deliver fee</string>
    <string name="checkout_estimated_delivery_time">Delivery time</string>
    <string name="checkout_total_price">Total</string>
    <string name="checkout_order_btn">Order</string>

    <string name="default_web_client_id" translatable="false">501195817554-2vn7c6s109srca2dic4ch9b3ogddeg6k.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1261374049035159</string>
    <string name="facebook_client_token">YOUR_CLIENT_TOKEN</string>
    <string name="fb_login_protocol_scheme">fb1261374049035159</string>
    <!-- active_list_food -->
    <string name="list_food_title">Kết quả cho: %1$s</string>

</resources>